--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
 
 body {
 	font-family: 'Montserrat', sans-serif;
-	background: #e0e0e0;
+	background: #5027e6a6;
 	color: #1d1d1d;
 }
 
@@ -33,12 +33,13 @@ body {
 	width: 100%;
 	margin-bottom: 10px;
 	border-radius: 15px;
+	transition: all 0.3s ease;
 }
 
 .paginacion {
 	position: fixed;
 	bottom: 0;
-	background: #100a1f;
+	background: #5027e6a6;
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -55,7 +56,7 @@ body {
 	text-align: center;
 	height: 50px;
 	width: 200px;
-	background: #241744;
+	background: rgb(181, 53, 246);
 	color: #fff;
 	border-radius: 100px;
 	font-family: 'Montserrat', sans-serif;
@@ -64,5 +65,26 @@ body {
 }
 
 .paginacion button:hover {
-	background: #137c32;
+	color: #5027e6a6;
+	background: #fff;
 }
+
+@media (max-width: 768px) {
+    .contenedor {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .contenedor {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  img {
+	cursor: pointer;
+  }
+
+  img:hover {
+	transform: translateY(-5px);
+  }
